fix: split button overflow

--- a/src/button-split.scss
+++ b/src/button-split.scss
@@ -76,4 +76,16 @@ $fd-button-split-margin: 0.125rem / 2;
       }
     }
   }
+
+  &__text {
+    max-width: 9.75rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    display: block;
+
+    &--compact {
+      max-width: 10rem;
+    }
+  }
 }
